[project]
name = "challenge"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio,postgresql-asyncpg]>=2.0.49",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "rich>=15.0.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
